Corrections de la synchro et de la detection photo
